src/objects/Sales_Event_Feedback__c.object
<CustomObject>
    <fields>
        <fullName>Domain_Expertise_Section_Score__c</fullName>
        <label>Domain Expertise Section Score</label>
        <summarizedField>Sales_Event_Feedback_Questions__c.Domain_Expertise_Score__c</summarizedField>
        <summaryForeignKey>Sales_Event_Feedback_Questions__c.Sales_Event_Feedback__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Domain_Negative__c</fullName>
        <formula>IF (Negative_Count_In_Domain_Expertise__c = 0, False, True)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Domain Negative</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Feedback_Role__c</fullName>
        <label>Feedback Role</label>
        <picklist>
            <picklistValues>
                <fullName>Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supporter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Negative_Count_In_Domain_Expertise__c</fullName>
        <label>Negative Count In Domain Expertise</label>
        <summaryFilterItems>
            <field>Sales_Event_Feedback_Questions__c.Negative_In_Domain_Expertise__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Sales_Event_Feedback_Questions__c.Sales_Event_Feedback__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Negative_Count_In_Presentation_Section__c</fullName>
        <label>Negative Count In Presentation Section</label>
        <summaryFilterItems>
            <field>Sales_Event_Feedback_Questions__c.Negative_In_Preparation__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Sales_Event_Feedback_Questions__c.Sales_Event_Feedback__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Negative_Count_In_Selling_Skill_Section__c</fullName>
        <label>Negative Count In Selling Skill Section</label>
        <summaryFilterItems>
            <field>Sales_Event_Feedback_Questions__c.Negative_In_Selling_Skill__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Sales_Event_Feedback_Questions__c.Sales_Event_Feedback__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Presentation_Negative__c</fullName>
        <formula>IF ( Negative_Count_In_Presentation_Section__c  = 0, False, True)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Presentation Negative</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Presentation_Section_Score__c</fullName>
        <label>Presentation Section Score</label>
        <summarizedField>Sales_Event_Feedback_Questions__c.Presentation_Section_Score__c</summarizedField>
        <summaryForeignKey>Sales_Event_Feedback_Questions__c.Sales_Event_Feedback__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SalesEventFeedbackCount__c</fullName>
        <label>SalesEventFeedbackCount</label>
        <summaryFilterItems>
            <field>Sales_Event_Feedback_Questions__c.Question_Section__c</field>
            <operation>equals</operation>
            <value>Event</value>
        </summaryFilterItems>
        <summaryForeignKey>Sales_Event_Feedback_Questions__c.Sales_Event_Feedback__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SalesEventFeedbackYesCount__c</fullName>
        <label>SalesEventFeedbackYesCount</label>
        <summaryFilterItems>
            <field>Sales_Event_Feedback_Questions__c.Answer__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Sales_Event_Feedback_Questions__c.Question_Section__c</field>
            <operation>equals</operation>
            <value>Event</value>
        </summaryFilterItems>
        <summaryForeignKey>Sales_Event_Feedback_Questions__c.Sales_Event_Feedback__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sales_Event__c</fullName>
        <label>Sales Event</label>
        <referenceTo>Sales_Event__c</referenceTo>
        <relationshipLabel>Sales Event Feedbacks</relationshipLabel>
        <relationshipName>Sales_Event_Feedbacks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Selling_Skill_Negative__c</fullName>
        <formula>IF ( Negative_Count_In_Selling_Skill_Section__c  = 0, False, True)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Selling Skill Negative</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Selling_Skill_Section_Score__c</fullName>
        <label>Selling Skill Section Score</label>
        <summarizedField>Sales_Event_Feedback_Questions__c.Selling_Skill_Score__c</summarizedField>
        <summaryForeignKey>Sales_Event_Feedback_Questions__c.Sales_Event_Feedback__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Feedback_Score__c</fullName>
        <formula>Presentation_Section_Score__c +  Domain_Expertise_Section_Score__c +  Selling_Skill_Section_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Feedback Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Negative_Answers__c</fullName>
        <formula>Negative_Count_In_Domain_Expertise__c +  Negative_Count_In_Presentation_Section__c +  Negative_Count_In_Selling_Skill_Section__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Negative Answers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Sales Event Feedback</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SEF-{0000}</displayFormat>
        <label>Sales Event Feedback Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Event Feedbacks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>